--- a/Thesis/content/05_evaluation.tex
+++ b/Thesis/content/05_evaluation.tex
@@ -8,15 +8,16 @@
 % Describe and discuss all results. Don't omit the raw data.
 % Depending on the type of thesis and evaluation, this can be anything between 10 and 30 pages.
 
-The design for a DIDComm-enabled ActivityPub protocol for federated social networks strives to take advantage of the features that both DIDs and DIDComm provide. The following chapter evaluates the proposed design to assess if these features were achieved. In addition, the evaluation compares the state-of-the-art ActivityPub implementation, the extended versions mentioned in \ref{sec:extending_activitypub} and the proposed design.
+The design for a DIDComm-enabled ActivityPub protocol for federated social networks strives to take advantage of the features that both DIDs and DIDComm provide. The following chapter evaluates the proposed design to assess the achievement level of these features. In addition, the evaluation compares the state-of-the-art ActivityPub implementation, the extended versions mentioned in \ref{sec:extending_activitypub} and the proposed design.
 
 \section{Decentralization}
 \subsection{Trust Encryption}
 ActivityPub relies on HTTPS to provide confidentiality and data integrity. This comprises a dependence on the authority issuing the certificates that make the TLS/SSL encryption possible. By implementing DIDComm, the encryption trust gets transferred to the decentralized identifiers. Thus removing any dependence from any third parties. 
+% TODO Write more. 
 
 \subsection{Resolving Process}
-The current implementation of Mastodon relies on the Webfinger protocol, which itself relies on the DNS, to resolve \emph{username@domain}-formatted usernames to an actor object. The DNS builds the foundation of daily Internet activity. As a centralized service, being so involved in the critical part of the Internet makes it a valuable target for attacks, such as \emph{spoofing}, \emph{ID hacking} or \emph{cache poisoning} \cite{carli2003security}. A single institution controls it, the ICANN\footnote{https://www.icann.org/}, that until 2016 was under the control of one single country \cite{lee_2016}. 
-By integrating ledger-based DIDs, this dependency on Webfinger and the DNS was only partially removed. Resolving a DID does not require the DNS to be successful. However, the service endpoint in the DID document still includes the domain of the Mastodon instance where it resides. To retrieve the actor object of the user being looked up, an HTTP GET request to the service endpoint is necessary. This means that a DNS resolution will still take place. On the contrary, the approach of the coauthors of ActivityPub and the DIDs mentioned in \ref{sec:extending_activitypub} completely removes the DNS dependency by using The Router Onion or \emph{Tor} to host the ActivityPub server \cite{webber_sporny_2017}. This indicates that if Mastodon were running in a DNS-free space, the design would achieve a fully-decentralized resolving process. 
+The current implementation of Mastodon relies on the Webfinger protocol, which itself relies on the DNS, to resolve \emph{username@domain} usernames to an actor object. The DNS builds the foundation of daily Internet activity. As a centralized service, being so involved in the critical part of the Internet makes it a valuable target for attacks, such as \emph{spoofing}, \emph{ID hacking} or \emph{cache poisoning} \cite{carli2003security}. A single institution controls it, the ICANN\footnote{https://www.icann.org/}, that until 2016 was under the control of one single country \cite{lee_2016}. 
+By integrating ledger-based DIDs, this dependency on Webfinger and the DNS was only partially removed. Resolving a DID does not require the DNS to be successful. However, the service endpoint in the DID document still includes the domain of the Mastodon instance where it resides. To retrieve the actor object of the user being looked up, an HTTP GET request to the service endpoint is necessary. This means that a DNS resolution will still take place. On the contrary, the approach of the coauthors of ActivityPub and the DIDs mentioned in \ref{sec:extending_activitypub} completely removes the DNS dependency by using The Router Onion \emph{(Tor)} to host the ActivityPub server \cite{webber_sporny_2017}. This indicates that if Mastodon were running in a DNS-free space, the design would achieve a fully-decentralized resolving process. 
  
 \subsection{Identity Management}
 
