--- a/Thesis/content/01_introduction.tex
+++ b/Thesis/content/01_introduction.tex
@@ -7,19 +7,19 @@ The Internet today is essential to our society. There is an online supply for al
 
 From the service provider's perspective, storing user data has found no better solution than an internal database, or put in other words, a silo of personal user information. For example, millions of users are kept on a centralized platform in today's most popular Online Social Networks (OSN) like Facebook, Twitter, or Youtube. Here, control, decision-making, user data, and censorship depend on a single profit-driven organization. As data became the \emph{world's most valuable resource} \cite{parkins_2017}, these silos became a target. Facebook's latest data breach made the private data of around 530 million users public \cite{holmes_2021}. Unfortunately, not even a \emph{safe} password can protect a user's data because it is not under his control. 
 
-The stage that followed the centralized digital identity is the federated digital identity, where the \emph{Sign in with}-pattern provided trusts relationships between service providers, allowing linking of identities among identity management services \cite{1556498}. However, having a centrally federated identity represented even a more considerable risk, and users still had no control over their data. Finally, as a solution, the Self-Sovereign Identity (SSI) phase brought full user autonomy, putting him in the center of the identity administration \cite{allen_2016}.  
+The stage that followed the centralized digital identity is the federated digital identity, where the \emph{Sign in with}-pattern provided trusts relationships between service providers, allowing linking of identities among identity management services \cite{1556498}. However, having a centrally federated identity represented even a more considerable risk, and users still had no control over their data. Finally, as a solution, the Self-Sovereign Identity (SSI) stage brought full user autonomy, putting him in the center of the identity administration \cite{allen_2016}.  
 
-SSI was not possible before because of a gap in technology to provide the infrastructure required for decentralized trust. Nonetheless, the emerging Distributed Ledger Technology (DLT) opened the door for a decentralized, verifiable identity foundation. The newly standardized Decentralized Identifiers (DIDs) from the W3C bring an approach to enable SSI. Furthermore, the DID-based communication protocol, DIDComm Messaging v2, promises high-trust, self-sovereign, and transport-agnostic interaction, following the same idea of further bringing decentralization to day-to-day Web usage.
+SSI was before not possible because of a gap in technology, that could provide the infrastructure required for decentralized trust. Nonetheless, the emerging Distributed Ledger Technology (DLT) opened the door for a decentralized, verifiable identity foundation. The newly standardized Decentralized Identifiers (DIDs) from the W3C bring an approach to enable SSI. Furthermore, the DID-based communication protocol, DIDComm Messaging v2, promises high-trust, self-sovereign, and transport-agnostic interaction, following the same idea of further bringing decentralization to day-to-day Web usage.
 
-Concerning OSNs, different approaches to bringing decentralization have been proposed and standardized. Just in 2018, the Decentralized Social Networking Protocol (DSNP) ActivityPub became a W3C recommendation \cite{lemmer-webber_tallon_guy_prodromou_2018}, and since then, many Decentralized Online Social Networks (DOSN) have implemented it. The largest ActivityPub implementer is the Twitter-like microblogging DOSN Mastodon\footnote{https://joinmastodon.org} with around three million registered users scattered through different independent servers. Each server sets its own rules, policies, and topics like LGBT+, Art, or Music. In addition, ActivityPub allows Mastodon to interact and communicate with other DOSNs that implement ActivityPub. An unthinkable situation in centralized architectures. 
+Concerning OSNs, different approaches to bringing decentralization have been proposed and standardized. Just in 2018, the Decentralized Social Networking Protocol (DSNP) ActivityPub became a W3C recommendation \cite{lemmer-webber_tallon_guy_prodromou_2018}, since then, many Decentralized Online Social Networks (DOSN) have implemented it. The largest ActivityPub implementer is the Twitter-like microblogging DOSN Mastodon\footnote{https://joinmastodon.org}, which has around three million registered users scattered through different independent servers. Each server sets its own rules, policies, and topics like LGBT+, Art, or Music. In addition, ActivityPub allows Mastodon to interact and communicate with other DOSNs that implement ActivityPub. An unthinkable situation in centralized architectures. 
 
 
 % --------Problem Statement------------------
 \section{Problem statement}
  
- ActivityPub has proved to be a mature protocol that restores some decentralization in the current Social Web paradigm \cite{webber_sporny_2017}.  However, it still presents significant deficiencies. Firstly, it only brings a decentralization level similar to the email paradigm. Mastodon, for example, uses centralized identity management. Creating an account uses basic password authentication. A federated way to create an account using a third party like \emph{Google} or \emph{Facebook} is not in the scope of Mastodon. Further attempts to improve identity verification have been made, such as using \emph{Keybase}\footnote{https://keybase.io} to prove ownership of accounts cryptographically. However, this functionality was removed soon after Zoom\footnote{https://zoom.us} bought Keybase in 2020 \cite{rochko_2021}. 
+ ActivityPub has proved to be a mature protocol that restores some decentralization in the current Social Web paradigm \cite{webber_sporny_2017}.  However, it still presents significant deficiencies. Firstly, it only brings a decentralization level similar to the email paradigm, where a few large providers control the space of a federated network \cite{webber_sporny_2017}. Mastodon, for example, uses centralized identity management, where an account creation uses basic password authentication. A federated way to create an account using a third party like \emph{Google} or \emph{Facebook} is not in its scope. Further attempts to improve identity verification have been made, such as using \emph{Keybase}\footnote{https://keybase.io} to prove ownership of accounts cryptographically. However, this functionality was removed soon after Zoom\footnote{https://zoom.us} bought Keybase in 2020 \cite{rochko_2021}. 
 
-Secondly, ActivityPub has no security mechanisms defined. Crucial requirements like non-repudiation, message integrity, and confidentiality have not been included in the protocol specification \cite{sporny_longley_sabadello_reed_steele_2021}. So far, the only present security feature is the recommended use of HTTPS, which relies on centralized certificate authorities. In Mastodon's implementation, the administrators of the servers have access to all the user's information, including private messages. Imposing a privacy risk for its users. 
+Secondly, ActivityPub has no security mechanisms defined. Crucial requirements like non-repudiation, message integrity, and confidentiality have not been included in the protocol specification \cite{sporny_longley_sabadello_reed_steele_2021}. So far, the only present security feature is the recommendation to use HTTPS, which relies on centralized certificate authorities. In Mastodon's implementation, the administrators of the servers have access to all the user's information, including private messages. Imposing a privacy risk for its users. 
 
 % --------Research Questions------------------
 
