--- a/Thesis/style/style.tex
+++ b/Thesis/style/style.tex
@@ -409,7 +409,7 @@ sensitive=false, morecomment=[s]{<!--}{-->}, morestring=[b]", morestring=[d]'}
 \setdescription{font=\color{Black}\rmfamily\itshape}
 %\renewenvironment{description}{\list{font=\color{Black}\itshape}}{\endlist}
 
-
+\renewcommand{\arraystretch}{1.5}
 % ========================================================================
 % = FOOTNOTES
 % ========================================================================
